force-app/main/default/objects/Amex_Card_Statement__c/Amex_Card_Statement__c.object-meta.xml
<CustomObject>
    <description
  >Shows the individual card statement amounts for each employee listed on an Amex Statement.</description>
    <label>Amex Statement Line Item</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Employee Statement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amex Statement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>