force-app/main/default/objects/Amex_Card_Statement__c/fields/Amex_Card_Admin__c.field-meta.xml
<CustomField>
    <fullName>Amex_Card_Admin__c</fullName>
    <description
  >Displays the user that will submit Amex reports on behalf of the Card Holder.</description>
    <formula
  >Amex_Card_Holder__r.Email_Alert_First_Name__c &amp;&quot; &quot;&amp; Amex_Card_Holder__r.Email_Alert_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the user that will submit Amex reports on behalf of the Card Holder.</inlineHelpText>
    <label>Amex Card Admin</label>
    <type>Text</type>
</CustomField>