force-app/main/default/objects/Amex_Card_Statement__c/fields/Amex_Card_Holder__c.field-meta.xml
<CustomField>
    <fullName>Amex_Card_Holder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >This is the person who&apos;s name is on the card for this Amex Card Statement.</description>
    <inlineHelpText
  >This is the person who&apos;s name is on the card for this Amex Card Statement.</inlineHelpText>
    <label>Amex Card Holder</label>
    <referenceTo>Amex_Card_Holder__c</referenceTo>
    <relationshipName>Amex_Card_Statements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>