force-app/main/default/objects/Amex_Card_Statement__c/fields/Amex_Statement__c.field-meta.xml
<CustomField>
    <fullName>Amex_Statement__c</fullName>
    <description
  >The Consolidated Billing Remittance from American Express that this individual card statement is a part of.</description>
    <inlineHelpText
  >The Consolidated Billing Remittance from American Express that this individual card statement is a part of.</inlineHelpText>
    <label>Amex Statement</label>
    <referenceTo>Amex_Statement__c</referenceTo>
    <relationshipName>Amex_Card_Statements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>