force-app/main/default/objects/Amex_Card_Statement__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <description
  >The total balance of all credits and debits for this Employee&apos;s Amex Statement.</description>
    <inlineHelpText
  >The total balance of all credits and debits for this Employee&apos;s Amex Statement.</inlineHelpText>
    <label>Balance</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>