force-app/main/default/objects/Amex_Card_Statement__c/fields/Card_Holder_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_Admin_Email__c</fullName>
    <description
  >Displays the Card Holder&apos;s email, or their admin&apos;s email if they have one.  Used for email alerts.</description>
    <formula>Amex_Card_Holder__r.Email_Alert_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the Card Holder&apos;s email, or their admin&apos;s email if they have one.  Used for email alerts.</inlineHelpText>
    <label>Card Holder / Admin Email</label>
    <type>Text</type>
</CustomField>