force-app/main/default/objects/Amex_Card_Statement__c/fields/Card_Holder_First_Last__c.field-meta.xml
<CustomField>
    <fullName>Card_Holder_First_Last__c</fullName>
    <formula
  >Amex_Card_Holder__r.Card_Holder_First_Name__c &amp; &quot; &quot; &amp;  Amex_Card_Holder__r.Card_Holder_Last_Name__c</formula>
    <label>Card Holder (First Last)</label>
    <type>Text</type>
</CustomField>