force-app/main/default/objects/Amex_Card_Statement__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description
  >Displays the statement close date for this group of statements.</description>
    <formula>Amex_Statement__r.Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the statement close date for this group of statements.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>