force-app/main/default/objects/Amex_Card_Statement__c/fields/Control__c.field-meta.xml
<CustomField>
    <fullName>Control__c</fullName>
    <description
  >Displays the control number for the group this statement is a part of.</description>
    <formula>TEXT(Amex_Statement__r.Control__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the control number for the group this statement is a part of.</inlineHelpText>
    <label>Control</label>
    <type>Text</type>
</CustomField>