force-app/main/default/objects/Amex_Card_Statement__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description
  >Indicates the due date for when the Amex report must be turned in for this card statement.</description>
    <formula>Amex_Statement__r.Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Indicates the due date for when the Amex report must be turned in for this card statement.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>