force-app/main/default/objects/Amex_Card_Statement__c/fields/Email_Alert_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_First_Name__c</fullName>
    <description
  >Shows the first name of the person who will receive the email alert.</description>
    <formula>Amex_Card_Holder__r.Email_Alert_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the first name of the person who will receive the email alert.</inlineHelpText>
    <label>Email Alert First Name</label>
    <type>Text</type>
</CustomField>