force-app/main/default/objects/Amex_Card_Statement__c/fields/Email_Alert_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert_Recipient__c</fullName>
    <description
  >The email address that will be used for the email alerts for this statement.</description>
    <inlineHelpText
  >The email address that will be used for the email alerts for this statement.</inlineHelpText>
    <label>Email Alert Recipient</label>
    <type>Email</type>
</CustomField>