force-app/main/default/objects/Amex_Card_Statement__c/fields/Email_Notice_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Notice_Status__c</fullName>
    <description
  >Indicates how many emails had to be sent in order to get the report turned in.</description>
    <inlineHelpText
  >Indicates how many emails had to be sent in order to get the report turned in.</inlineHelpText>
    <label>Email Notice Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Not Sent</fullName>
                <default>true</default>
                <label>Email Not Sent</label>
            </value>
            <value>
                <fullName>1st Notice</fullName>
            </value>
            <value>
                <fullName>2nd Notice</fullName>
            </value>
            <value>
                <fullName>Late Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>