force-app/main/default/objects/Amex_Card_Statement__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <formula>&quot;AMEX - &quot;&amp;
CASE(
MONTH(Close_Date__c),
1, &quot;JAN&quot;,
2, &quot;FEB&quot;,
3, &quot;MAR&quot;,
4, &quot;APR&quot;,
5, &quot;MAY&quot;,
6, &quot;JUN&quot;,
7, &quot;JUL&quot;,
8, &quot;AUG&quot;,
9, &quot;SEP&quot;,
10, &quot;OCT&quot;,
11, &quot;NOV&quot;,
12, &quot;DEC&quot;,
&quot;&quot;
)
&amp;&quot; &quot;
&amp;TEXT(DAY(Close_Date__c))
&amp;&quot; &quot;
&amp;TEXT(YEAR(Close_Date__c))
&amp;&quot; - &quot;
&amp;UPPER(LEFT(Amex_Card_Holder__r.Card_Holder_First_Name__c ,1))
&amp;&quot; &quot;
&amp;UPPER( Amex_Card_Holder__r.Card_Holder_Last_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Name</label>
    <type>Text</type>
</CustomField>