force-app/main/default/objects/Amex_Card_Statement__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <description
  >Shows the status of the report for this Amex Statement having been received by Accounts Payable.</description>
    <inlineHelpText
  >Shows the status of the report for this Amex Statement having been received by Accounts Payable.</inlineHelpText>
    <label>Report Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
                <default>true</default>
                <label>Outstanding</label>
            </value>
            <value>
                <fullName>Received - On-time</fullName>
            </value>
            <value>
                <fullName>Received - Late</fullName>
            </value>
            <value>
                <fullName>Sent Back to Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>