force-app/main/default/objects/Amex_Card_Statement__c/listViews/Current_Statement_11007.listView-meta.xml
<ListView>
    <fullName>Current_Statement_11007</fullName>
    <columns>Amex_Statement__c</columns>
    <columns>Amex_Card_Holder__c</columns>
    <columns>Balance__c</columns>
    <columns>Report_Status__c</columns>
    <columns>Email_Notice_Status__c</columns>
    <columns>Email_Alert_Recipient__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Control__c</field>
        <operation>equals</operation>
        <value>11007,11004</value>
    </filters>
    <label>Current - Closing 28th</label>
</ListView>