force-app/main/default/objects/Amex_Card_Statement__c/listViews/Current_Statement_21005.listView-meta.xml
<ListView>
    <fullName>Current_Statement_21005</fullName>
    <columns>Amex_Statement__c</columns>
    <columns>Amex_Card_Holder__c</columns>
    <columns>Card_Holder_First_Last__c</columns>
    <columns>Balance__c</columns>
    <columns>Report_Status__c</columns>
    <columns>Email_Notice_Status__c</columns>
    <columns>Email_Alert_Recipient__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>LAST_MONTH</value>
    </filters>
    <filters>
        <field>Control__c</field>
        <operation>equals</operation>
        <value>21005,21006,21009,41007,51002,61003</value>
    </filters>
    <label>Current - Closing 23rd</label>
</ListView>